Fix Goodsleep loader layout alignment

--- a/wp-content/plugins/goodsleep-elementor/assets/css/frontend.css
+++ b/wp-content/plugins/goodsleep-elementor/assets/css/frontend.css
@@ -195,6 +195,7 @@
   text-align: center;
   display: flex;
   align-items: center;
+  flex-direction: column;
   justify-content: center;
 }
 
